--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 ATLAS_URI=mongodb+srv://admin:admin123@project.kn8yses.mongodb.net/users?retryWrites=true&w=majority
+
+S3_ACCESS_KEY=AKIAUN3POM5SJMJVJ5OZ
+SECRET_ACCESS_KEY=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
+S3_BUCKET=ap-southeast-1
